src/tests/ci/assignment_5_functions/valid/06_nested_define.c
#define A B
#define B 5

int main() {
    int x = A;
    return x;
}