src/tests/ci/assignment_5_functions/invalid_semantic/22_wrong_return_pointer_to_int.c
int foo() {
    int x = 5;
    return &x;
}

int main() {
    return foo();
}